--- a/k8s/common/ingress.yml
+++ b/k8s/common/ingress.yml
@@ -5,6 +5,9 @@ metadata:
   labels:
     app.kubernetes.io/name: unified-gateway
     app.kubernetes.io/part-of: heart-disease-prediction
+  annotations:
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   ingressClassName: nginx
   rules:
